--- a/web/themes/custom/module_5_test/module_5_test.libraries.yml
+++ b/web/themes/custom/module_5_test/module_5_test.libraries.yml
@@ -2,3 +2,14 @@ global-styling:
   css:
     theme:
       css/style.css: {}
+
+slider:
+  version: VERSION
+  css:
+    theme:
+      //cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.8.1/slick.css: {type: external}
+      //cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.8.1/slick-theme.css: {type: external}
+      css/components/slider.css: { }
+  js:
+    //cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.8.1/slick.min.js: {type: external}
+    js/slick.js: { }
