--- a/config/sync/core.extension.yml
+++ b/config/sync/core.extension.yml
@@ -31,6 +31,7 @@ module:
   page_cache: 0
   path: 0
   path_alias: 0
+  responsive_image: 0
   search: 0
   shortcut: 0
   system: 0
@@ -48,4 +49,5 @@ theme:
   claro: 0
   stable9: 0
   bootstrap5: 0
+  module_5_test: 0
 profile: standard
