--- a/config/sync/system.site.yml
+++ b/config/sync/system.site.yml
@@ -6,9 +6,9 @@ name: 'module 5 test'
 mail: test@gmail.com
 slogan: ''
 page:
-  403: ''
-  404: ''
-  front: /node
+  403: /node/6
+  404: /node/7
+  front: /node/5
 admin_compact_mode: false
 weight_select_max: 100
 default_langcode: en
